<resources>
    <string name="app_name">COVID Tracker</string>
    <string name="title">#COVID19</string>
    <string name="day">13</string>
    <string name="year">2020</string>
    <string name="month">April</string>
    <string name="country_name">Country \nName</string>
    <string name="card_total_cases">Total \nCases</string>
    <string name="total_deaths">Total \nDeaths</string>
    <string name="total_recovered">Total \nRecovered</string>
    <string name="egypt">Egypt</string>
    <string name="Cases">Cases</string>
    <string name="NewCases">New Cases</string>
    <string name="totalrecoverd">Total Recovered</string>
    <string name="activecases">Active Cases</string>
    <string name="deaths">Deaths</string>
    <string name="newdeaths">New Deaths</string>
    <string name="seriouscritical">Serious Critical</string>
    <string name="casespermillion">Cases Per Million</string>
    <string name="subscribe_country">Subscribe Country</string>
    <string name="clickSubscribe">Click on subscribe to select your country</string>
    <string name="UpdateDataEvery">"Update Data Every "</string>
    <string name="OneHoure">One Hour</string>
    <string name="TwoHoure">Two Hours</string>
    <string name="FiveHoure">Five Hours</string>
    <string name="OnceaDay">Once a day</string>
    <string name="selectCountry">Select Country</string>
    <string name="save">Save</string>
    <string name="new_update">New Update</string>
    <string name="recover">Recover</string>
    <string name="last_update">Last Update</string>
    <string name="totaldeaths">Total Deaths</string>
    <string name="new_changes">New Changes</string>
    <string name="tracker_the_spread_of_corona">Tracker the spread of Coronavirus</string>
</resources>
