<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/txt_card_select_county"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#171B2B"
            android:gravity="center"
            android:text="@string/country_name"
            android:textColor="#F1F1FB"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/acme" />

        <TextView
            android:id="@+id/card_total_cases"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#171B2B"
            android:gravity="center"
            android:text="@string/card_total_cases"
            android:textColor="#B0DA6E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/acme" />

        <TextView
            android:id="@+id/card_total_coverd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#171B2B"
            android:gravity="center"
            android:text="@string/total_recovered"
            android:textColor="#F1F1FB"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/acme" />

        <TextView
            android:id="@+id/card_total_deaths"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#171B2B"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/total_deaths"
            android:textColor="#F1F1FB"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/acme" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
